manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-notebook-app
  namespace: the-notebook-app
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: the-notebook-app
      containers:
        - name: the-notebook-app
          image: <OVERRIDE ME>
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
