manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-notebook-app
  namespace: the-notebook-app
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
