manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-notebook-app-ingress
  namespace: the-notebook-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: the-notebook-app.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: the-notebook-app
            port:
              number: 5000
  # Optional: Add a TLS configuration if you are using HTTPS
  # tls:
  # - hosts:
  #   - your-domain.com
  #   secretName: tls-secret
